@@ -1,5 +1,12 @@
 2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>
 
+	Fix #341229
+	* calendar/e-cal-backend-exchange-calendar.c:
+	(modify_object_with_href): Set the old object so 
+	that it gets refreshed properly.
+
+2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>
+
 	Fixes #339561
 	* calendar/e-cal-backend-exchange-calendar.c:
 	(modify_object_with_href): check for modification of end times.
